# remote-control-for-windows

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/skills/rcw-debug-workflow/: SKILL.md
.agents/skills/rcw-debug-workflow/agents/: openai.yaml
.agents/skills/rcw-task-workflow/: SKILL.md
.agents/skills/rcw-task-workflow/agents/: openai.yaml
.agents/skills/rcw-test-workflow/: SKILL.md
.agents/skills/rcw-test-workflow/agents/: openai.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  governance.yml
.github/workflows/: ci.yml  release.yml
crates/rcw-common/: Cargo.toml
crates/rcw-common/src/: audit.rs  config.rs  error.rs  ids.rs  lib.rs  protocol.rs  totp.rs  transfer.rs
crates/rcw-host/: Cargo.toml
crates/rcw-host-core/: Cargo.toml
crates/rcw-host-core/src/: audit.rs  commands.rs  connection.rs  identity.rs  lib.rs  output.rs  platform.rs  state.rs  tunnel.rs  upload.rs
crates/rcw-host-gui/: index.html  package-lock.json  package.json  tsconfig.json
crates/rcw-host-gui/src/: main.ts  styles.css
crates/rcw-host-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/rcw-host-gui/src-tauri/capabilities/: default.json
crates/rcw-host-gui/src-tauri/src/: main.rs
crates/rcw-host/src/: audit.rs  commands.rs  connection.rs  identity.rs  main.rs  output.rs  platform.rs  upload.rs
crates/rcw-server/: Cargo.toml
crates/rcw-server/src/: handlers.rs  main.rs  state.rs  ws.rs
crates/rcw-server/src/handlers/: control.rs  host.rs
crates/rcwctl/: Cargo.toml
crates/rcwctl/src/: audit.rs  cancel.rs  cli.rs  commands.rs  controller_config.rs  defaults.rs  jobs.rs  main.rs  mcp.rs  output.rs  session.rs  transport.rs  tunnel.rs
crates/rcwctl/src/mcp/: server.rs  tasks.rs  types.rs
docs/: README.md  architecture.md  cli.md  configuration.md  debug-workflow.md  dev-workflow.md  e2e-test-plan.md  e2e-v0.1.6.md  e2e-v0.1.7.md  host-gui.md  implementation-plan.md  product-design.md  product-requirements.md  project-scope.md  protocol.md  release.md  roadmap.md  security.md  testing.md  windows-apis.md
npm/: README.md  package.json
npm/scripts/: check.js  install.js
scripts/debug/windows/: launch-rcw-host-gui-interactive.ps1  launch-rcw-host-interactive.ps1  launch-session-report.ps1  stop-rcw-host-processes.ps1
tests/e2e/: conftest.py  harness.py  test_console_smoke.py  test_gui_cdp_smoke.py  test_gui_control_smoke.py  test_mcp_smoke.py
