[workspace]
members = [
    "crates/rcw-common",
    "crates/rcw-server",
    "crates/rcw-host",
    "crates/rcwctl",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/faithleysath/remote-control-for-windows"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
futures-util = "0.3"
hmac = "0.12"
hex = "0.4"
hostname = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ulid = { version = "1.1", features = ["serde"] }
url = "2.5"
