[package]
name = "rcw-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
hmac.workspace = true
hex.workspace = true
rand.workspace = true
schemars = "1.0"
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
ulid.workspace = true
url.workspace = true
