[package]
name = "rcw-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
futures-util.workspace = true
hostname.workspace = true
rcw-common = { path = "../rcw-common" }
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

