[package]
name = "rcwctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
futures-util.workspace = true
rcw-common = { path = "../rcw-common" }
rmcp = { version = "1.7.0", features = ["transport-io"] }
schemars = "1.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing-subscriber.workspace = true
